fix grid overflow issue in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,25 @@
   html, body {
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
+  #background-image {
+    background: url(images/uyuni2.jpg) no-repeat center center;
+    background-size: cover;
+  }
 
-.grid {
-    height: 80%;
-    width: 80%;
+ .grid {
+    max-width: 600px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5%;
     background: yellow;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 
     display: grid;
     grid-template-rows: 10% 80% 10%;
